group1_proj2/codes/draw/y.output
Terminals unused in grammar

   LEFT_BRACET
   RIGTH_BRACET
   LEFT_PARENTHESIS
   RIGHT_PARENTHESIS
   COMMA
   LEFT_CURLYBRACKET
   RIGHT_CURLYBRACKET
   SUBSTRACTION_OPERATOR
   MULTIPICATION_OPERATOR
   DIVISION_OPERATOR


Grammar

    0 $accept: program $end

    1 program: BEGIN_OF_MAIN stmt END_OF_MAIN

    2 stmt: def_stmt
    3     | assignment_stmt
    4     | logic_stmt
    5     | comment_stmt

    6 def_stmt: data_type identifier

    7 data_type: INTEGER
    8          | FLOAT
    9          | WIDTH
   10          | HEIGHT
   11          | STROKE_WIDTH
   12          | DEF_WIDTH
   13          | DEF_HEIGHT
   14          | RECTANGLE
   15          | LINE
   16          | OVAL
   17          | COMPOSITE_SHAPE
   18          | SHAPE
   19          | PARAMETER
   20          | LOCATION
   21          | COLOR
   22          | SET
   23          | DIRECTION
   24          | BOOLEAN

   25 identifier: IDENTIFIER assignment_stmt
   26           | IDENTIFIER function_callers

   27 assignment_stmt: ASSIGMENT_OPERATOR cshape

   28 cshape: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER
   29       | SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER
   30       | SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER
   31       | IDENTIFIER ERROR_NO_1
   32       | ERROR_NO_2
   33       | ERROR_NO_3
   34       | ERROR_NO_4
   35       | ERROR_NO_5

   36 ERROR_NO_1: SUMMATION_OPERATOR SUMMATION_OPERATOR

   37 ERROR_NO_2: IDENTIFIER IDENTIFIER

   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

   39 ERROR_NO_4: INTEGER

   40 ERROR_NO_5: IDENTIFIER

   41 function_callers: DRAW_FNC
   42                 | FILL_STATE_FNC
   43                 | FILL_COLOR_FNC

   44 logic_stmt: expr
   45           | expr logical_op
   46           | expr logical_op expr

   47 comment_stmt: COMMENT stmt

   48 expr: identifier
   49     | function_callers

   50 logical_op: EQUALS_TO_INDICATOR
   51           | NOT_EQUALS_TO_INDICATOR
   52           | LESS_THAN_INDICATOR
   53           | GREATHER_THAN_INDICATOR
   54           | ASSIGMENT_OPERATOR


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMENT (258) 47
LEFT_BRACET (259)
RIGTH_BRACET (260)
LEFT_PARENTHESIS (261)
RIGHT_PARENTHESIS (262)
COMMA (263)
LEFT_CURLYBRACKET (264)
RIGHT_CURLYBRACKET (265)
ASSIGMENT_OPERATOR (266) 27 54
SUMMATION_OPERATOR (267) 28 29 30 36 38
SUBSTRACTION_OPERATOR (268)
MULTIPICATION_OPERATOR (269)
DIVISION_OPERATOR (270)
EQUALS_TO_INDICATOR (271) 50
NOT_EQUALS_TO_INDICATOR (272) 51
LESS_THAN_INDICATOR (273) 52
GREATHER_THAN_INDICATOR (274) 53
FLOAT (275) 8
INTEGER (276) 7 39
IDENTIFIER (277) 25 26 28 29 30 31 37 38 40
WIDTH (278) 9
HEIGHT (279) 10
STROKE_WIDTH (280) 11
DEF_WIDTH (281) 12
DEF_HEIGHT (282) 13
RECTANGLE (283) 14
LINE (284) 15
OVAL (285) 16
COMPOSITE_SHAPE (286) 17
SHAPE (287) 18
PARAMETER (288) 19
LOCATION (289) 20
COLOR (290) 21
SET (291) 22
DIRECTION (292) 23
BOOLEAN (293) 24
BEGIN_OF_MAIN (294) 1
END_OF_MAIN (295) 1
DRAW_FNC (296) 41
FILL_COLOR_FNC (297) 43
FILL_STATE_FNC (298) 42


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
stmt (46)
    on left: 2 3 4 5, on right: 1 47
def_stmt (47)
    on left: 6, on right: 2
data_type (48)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24, on right:
    6
identifier (49)
    on left: 25 26, on right: 6 48
assignment_stmt (50)
    on left: 27, on right: 3 25
cshape (51)
    on left: 28 29 30 31 32 33 34 35, on right: 27
ERROR_NO_1 (52)
    on left: 36, on right: 31
ERROR_NO_2 (53)
    on left: 37, on right: 32
ERROR_NO_3 (54)
    on left: 38, on right: 33
ERROR_NO_4 (55)
    on left: 39, on right: 34
ERROR_NO_5 (56)
    on left: 40, on right: 35
function_callers (57)
    on left: 41 42 43, on right: 26 49
logic_stmt (58)
    on left: 44 45 46, on right: 4
comment_stmt (59)
    on left: 47, on right: 5
expr (60)
    on left: 48 49, on right: 44 45 46
logical_op (61)
    on left: 50 51 52 53 54, on right: 45 46


State 0

    0 $accept: . program $end

    BEGIN_OF_MAIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: BEGIN_OF_MAIN . stmt END_OF_MAIN

    COMMENT             shift, and go to state 3
    ASSIGMENT_OPERATOR  shift, and go to state 4
    FLOAT               shift, and go to state 5
    INTEGER             shift, and go to state 6
    IDENTIFIER          shift, and go to state 7
    WIDTH               shift, and go to state 8
    HEIGHT              shift, and go to state 9
    STROKE_WIDTH        shift, and go to state 10
    DEF_WIDTH           shift, and go to state 11
    DEF_HEIGHT          shift, and go to state 12
    RECTANGLE           shift, and go to state 13
    LINE                shift, and go to state 14
    OVAL                shift, and go to state 15
    COMPOSITE_SHAPE     shift, and go to state 16
    SHAPE               shift, and go to state 17
    PARAMETER           shift, and go to state 18
    LOCATION            shift, and go to state 19
    COLOR               shift, and go to state 20
    SET                 shift, and go to state 21
    DIRECTION           shift, and go to state 22
    BOOLEAN             shift, and go to state 23
    DRAW_FNC            shift, and go to state 24
    FILL_COLOR_FNC      shift, and go to state 25
    FILL_STATE_FNC      shift, and go to state 26

    stmt              go to state 27
    def_stmt          go to state 28
    data_type         go to state 29
    identifier        go to state 30
    assignment_stmt   go to state 31
    function_callers  go to state 32
    logic_stmt        go to state 33
    comment_stmt      go to state 34
    expr              go to state 35


State 2

    0 $accept: program . $end

    $end  shift, and go to state 36


State 3

   47 comment_stmt: COMMENT . stmt

    COMMENT             shift, and go to state 3
    ASSIGMENT_OPERATOR  shift, and go to state 4
    FLOAT               shift, and go to state 5
    INTEGER             shift, and go to state 6
    IDENTIFIER          shift, and go to state 7
    WIDTH               shift, and go to state 8
    HEIGHT              shift, and go to state 9
    STROKE_WIDTH        shift, and go to state 10
    DEF_WIDTH           shift, and go to state 11
    DEF_HEIGHT          shift, and go to state 12
    RECTANGLE           shift, and go to state 13
    LINE                shift, and go to state 14
    OVAL                shift, and go to state 15
    COMPOSITE_SHAPE     shift, and go to state 16
    SHAPE               shift, and go to state 17
    PARAMETER           shift, and go to state 18
    LOCATION            shift, and go to state 19
    COLOR               shift, and go to state 20
    SET                 shift, and go to state 21
    DIRECTION           shift, and go to state 22
    BOOLEAN             shift, and go to state 23
    DRAW_FNC            shift, and go to state 24
    FILL_COLOR_FNC      shift, and go to state 25
    FILL_STATE_FNC      shift, and go to state 26

    stmt              go to state 37
    def_stmt          go to state 28
    data_type         go to state 29
    identifier        go to state 30
    assignment_stmt   go to state 31
    function_callers  go to state 32
    logic_stmt        go to state 33
    comment_stmt      go to state 34
    expr              go to state 35


State 4

   27 assignment_stmt: ASSIGMENT_OPERATOR . cshape

    SUMMATION_OPERATOR  shift, and go to state 38
    INTEGER             shift, and go to state 39
    IDENTIFIER          shift, and go to state 40

    cshape      go to state 41
    ERROR_NO_2  go to state 42
    ERROR_NO_3  go to state 43
    ERROR_NO_4  go to state 44
    ERROR_NO_5  go to state 45


State 5

    8 data_type: FLOAT .

    $default  reduce using rule 8 (data_type)


State 6

    7 data_type: INTEGER .

    $default  reduce using rule 7 (data_type)


State 7

   25 identifier: IDENTIFIER . assignment_stmt
   26           | IDENTIFIER . function_callers

    ASSIGMENT_OPERATOR  shift, and go to state 4
    DRAW_FNC            shift, and go to state 24
    FILL_COLOR_FNC      shift, and go to state 25
    FILL_STATE_FNC      shift, and go to state 26

    assignment_stmt   go to state 46
    function_callers  go to state 47


State 8

    9 data_type: WIDTH .

    $default  reduce using rule 9 (data_type)


State 9

   10 data_type: HEIGHT .

    $default  reduce using rule 10 (data_type)


State 10

   11 data_type: STROKE_WIDTH .

    $default  reduce using rule 11 (data_type)


State 11

   12 data_type: DEF_WIDTH .

    $default  reduce using rule 12 (data_type)


State 12

   13 data_type: DEF_HEIGHT .

    $default  reduce using rule 13 (data_type)


State 13

   14 data_type: RECTANGLE .

    $default  reduce using rule 14 (data_type)


State 14

   15 data_type: LINE .

    $default  reduce using rule 15 (data_type)


State 15

   16 data_type: OVAL .

    $default  reduce using rule 16 (data_type)


State 16

   17 data_type: COMPOSITE_SHAPE .

    $default  reduce using rule 17 (data_type)


State 17

   18 data_type: SHAPE .

    $default  reduce using rule 18 (data_type)


State 18

   19 data_type: PARAMETER .

    $default  reduce using rule 19 (data_type)


State 19

   20 data_type: LOCATION .

    $default  reduce using rule 20 (data_type)


State 20

   21 data_type: COLOR .

    $default  reduce using rule 21 (data_type)


State 21

   22 data_type: SET .

    $default  reduce using rule 22 (data_type)


State 22

   23 data_type: DIRECTION .

    $default  reduce using rule 23 (data_type)


State 23

   24 data_type: BOOLEAN .

    $default  reduce using rule 24 (data_type)


State 24

   41 function_callers: DRAW_FNC .

    $default  reduce using rule 41 (function_callers)


State 25

   43 function_callers: FILL_COLOR_FNC .

    $default  reduce using rule 43 (function_callers)


State 26

   42 function_callers: FILL_STATE_FNC .

    $default  reduce using rule 42 (function_callers)


State 27

    1 program: BEGIN_OF_MAIN stmt . END_OF_MAIN

    END_OF_MAIN  shift, and go to state 48


State 28

    2 stmt: def_stmt .

    $default  reduce using rule 2 (stmt)


State 29

    6 def_stmt: data_type . identifier

    IDENTIFIER  shift, and go to state 7

    identifier  go to state 49


State 30

   48 expr: identifier .

    $default  reduce using rule 48 (expr)


State 31

    3 stmt: assignment_stmt .

    $default  reduce using rule 3 (stmt)


State 32

   49 expr: function_callers .

    $default  reduce using rule 49 (expr)


State 33

    4 stmt: logic_stmt .

    $default  reduce using rule 4 (stmt)


State 34

    5 stmt: comment_stmt .

    $default  reduce using rule 5 (stmt)


State 35

   44 logic_stmt: expr .
   45           | expr . logical_op
   46           | expr . logical_op expr

    ASSIGMENT_OPERATOR       shift, and go to state 50
    EQUALS_TO_INDICATOR      shift, and go to state 51
    NOT_EQUALS_TO_INDICATOR  shift, and go to state 52
    LESS_THAN_INDICATOR      shift, and go to state 53
    GREATHER_THAN_INDICATOR  shift, and go to state 54

    $default  reduce using rule 44 (logic_stmt)

    logical_op  go to state 55


State 36

    0 $accept: program $end .

    $default  accept


State 37

   47 comment_stmt: COMMENT stmt .

    $default  reduce using rule 47 (comment_stmt)


State 38

   29 cshape: SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER
   30       | SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    IDENTIFIER  shift, and go to state 56


State 39

   39 ERROR_NO_4: INTEGER .

    $default  reduce using rule 39 (ERROR_NO_4)


State 40

   28 cshape: IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER
   31       | IDENTIFIER . ERROR_NO_1
   37 ERROR_NO_2: IDENTIFIER . IDENTIFIER
   38 ERROR_NO_3: IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER
   40 ERROR_NO_5: IDENTIFIER .

    SUMMATION_OPERATOR  shift, and go to state 57
    IDENTIFIER          shift, and go to state 58

    $default  reduce using rule 40 (ERROR_NO_5)

    ERROR_NO_1  go to state 59


State 41

   27 assignment_stmt: ASSIGMENT_OPERATOR cshape .

    $default  reduce using rule 27 (assignment_stmt)


State 42

   32 cshape: ERROR_NO_2 .

    $default  reduce using rule 32 (cshape)


State 43

   33 cshape: ERROR_NO_3 .

    $default  reduce using rule 33 (cshape)


State 44

   34 cshape: ERROR_NO_4 .

    $default  reduce using rule 34 (cshape)


State 45

   35 cshape: ERROR_NO_5 .

    $default  reduce using rule 35 (cshape)


State 46

   25 identifier: IDENTIFIER assignment_stmt .

    $default  reduce using rule 25 (identifier)


State 47

   26 identifier: IDENTIFIER function_callers .

    $default  reduce using rule 26 (identifier)


State 48

    1 program: BEGIN_OF_MAIN stmt END_OF_MAIN .

    $default  reduce using rule 1 (program)


State 49

    6 def_stmt: data_type identifier .

    $default  reduce using rule 6 (def_stmt)


State 50

   54 logical_op: ASSIGMENT_OPERATOR .

    $default  reduce using rule 54 (logical_op)


State 51

   50 logical_op: EQUALS_TO_INDICATOR .

    $default  reduce using rule 50 (logical_op)


State 52

   51 logical_op: NOT_EQUALS_TO_INDICATOR .

    $default  reduce using rule 51 (logical_op)


State 53

   52 logical_op: LESS_THAN_INDICATOR .

    $default  reduce using rule 52 (logical_op)


State 54

   53 logical_op: GREATHER_THAN_INDICATOR .

    $default  reduce using rule 53 (logical_op)


State 55

   45 logic_stmt: expr logical_op .
   46           | expr logical_op . expr

    IDENTIFIER      shift, and go to state 7
    DRAW_FNC        shift, and go to state 24
    FILL_COLOR_FNC  shift, and go to state 25
    FILL_STATE_FNC  shift, and go to state 26

    $default  reduce using rule 45 (logic_stmt)

    identifier        go to state 30
    function_callers  go to state 32
    expr              go to state 60


State 56

   29 cshape: SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER
   30       | SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    SUMMATION_OPERATOR  shift, and go to state 61


State 57

   28 cshape: IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER
   36 ERROR_NO_1: SUMMATION_OPERATOR . SUMMATION_OPERATOR
   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    SUMMATION_OPERATOR  shift, and go to state 62
    IDENTIFIER          shift, and go to state 63


State 58

   37 ERROR_NO_2: IDENTIFIER IDENTIFIER .

    $default  reduce using rule 37 (ERROR_NO_2)


State 59

   31 cshape: IDENTIFIER ERROR_NO_1 .

    $default  reduce using rule 31 (cshape)


State 60

   46 logic_stmt: expr logical_op expr .

    $default  reduce using rule 46 (logic_stmt)


State 61

   29 cshape: SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER
   30       | SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    IDENTIFIER  shift, and go to state 64


State 62

   36 ERROR_NO_1: SUMMATION_OPERATOR SUMMATION_OPERATOR .

    $default  reduce using rule 36 (ERROR_NO_1)


State 63

   28 cshape: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER .
   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    SUMMATION_OPERATOR  shift, and go to state 65

    $default  reduce using rule 28 (cshape)


State 64

   29 cshape: SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER
   30       | SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    SUMMATION_OPERATOR  shift, and go to state 66


State 65

   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    IDENTIFIER  shift, and go to state 67


State 66

   29 cshape: SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER
   30       | SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    IDENTIFIER  shift, and go to state 68


State 67

   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    SUMMATION_OPERATOR  shift, and go to state 69


State 68

   29 cshape: SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER .
   30       | SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER

    SUMMATION_OPERATOR  shift, and go to state 70

    $default  reduce using rule 29 (cshape)


State 69

   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER SUMMATION_OPERATOR IDENTIFIER

    IDENTIFIER  shift, and go to state 71


State 70

   30 cshape: SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER

    IDENTIFIER  shift, and go to state 72


State 71

   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER . SUMMATION_OPERATOR IDENTIFIER

    SUMMATION_OPERATOR  shift, and go to state 73


State 72

   30 cshape: SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER .

    $default  reduce using rule 30 (cshape)


State 73

   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR . IDENTIFIER

    IDENTIFIER  shift, and go to state 74


State 74

   38 ERROR_NO_3: IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER SUMMATION_OPERATOR IDENTIFIER .

    $default  reduce using rule 38 (ERROR_NO_3)
